--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,12 +3,77 @@ body,
 #root {
     height: 100%;
     width: 100%;
-    margin: 0;
+    margin: 0 auto;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+#container {
+    max-width: 20rem;
+    min-width: 7rem;
+    height: 100%;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#input {
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    color: rgb(51, 51, 51);
+    font-size: 1.25rem;
+    outline: none;
+    width: 89%;
+    margin-bottom: 1rem;
+
+    background-color: rgb(255, 255, 255);
+    border-width: 0.125rem;
+    border-style: solid;
+    border-color: rgb(204, 204, 204);
+    border-image: initial;
+    padding: 0.25rem 0.375rem;
+    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+}
+
+#input:active,
+#input:focus {
+    border-width: 0.125rem;
+    border-style: solid;
+    border-color: rgb(51, 51, 51);
+    border-image: initial;
+}
+
+.button:disabled {
+    cursor: not-allowed;
+}
+
+.button {
+    min-width: 6.25rem;
+    max-width: 18.75rem;
+    width: 93.34%;
+    height: 3.125rem;
+    background-color: rgb(51, 51, 51);
+    text-shadow: rgba(0, 0, 0, 0.25) 0px -1px 0px;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    font-size: 20px;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-bottom: 1rem;
+    padding: 0.25rem 0.875rem;
+    border-width: 0.0625rem;
+    border-style: solid;
+    border-image: initial;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    border-radius: 0.125rem;
+    text-decoration: none;
+    cursor: pointer;
+    outline: none;
 }
 
 code {
