--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,27 @@ body,
     -moz-osx-font-smoothing: grayscale;
 }
 
+.share-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem 0.5rem 0.5rem 0.3rem;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 2rem;
+    right: 2rem;
+    border-radius: 50%;
+    border: 0;
+    background-color: green;
+    cursor: pointer;
+    outline: 0;
+    margin: 0;
+}
+.share-button:active {
+    border: 1px solid rgb(51, 51, 51);
+}
+
 #container {
     max-width: 20rem;
     min-width: 7rem;
